--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 09:24:00 AM</p>
+    <p class="lastupdate">09/19/2020 09:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.8&#176;F</td>
+        <td class="data">63.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.8&#176;F</td>
+        <td class="data">63.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.8&#176;F</td>
+        <td class="data">63.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">79%</td>
+        <td class="data">77%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.963 inHg (0.015)</td>
+        <td class="data">29.962 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNW (338&#176;)</td>
+        <td class="data">5 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.9&#176;F</td>
+        <td class="data">72.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">51%</td>
+        <td class="data">53%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:23:53 AM">
-            62.8</span><br/>
+          <span title="09:28:21 AM">
+            63.5</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:23:53 AM" class="hival">
-            62.8</span>
+          <span title="09:28:21 AM" class="hival">
+            63.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:23:53 AM">
-            56.2</span><br/>
+          <span title="09:27:19 AM">
+            56.4</span><br/>
           <span title="05:45:12 AM">
             47.4</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:16:28 AM">
             90</span><br/>
-          <span title="12:00:04 AM">
-            78</span>
+          <span title="09:28:17 AM">
+            77</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="09:17:03 AM">
-            10</span><br/>
-          51
+          <span title="09:26:27 AM">
+            13</span><br/>
+          306
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          8
+          5
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          218
+          219
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:24:00 AM">
-            51</span><br/>
+          <span title="09:28:01 AM">
+            53</span><br/>
           <span title="04:51:00 AM">
             45</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:24:00 AM (Saturday)">
-            51</span><br/>
+          <span title="09:28:01 AM (Saturday)">
+            53</span><br/>
           <span title="05:44:02 PM (Wednesday)">
             26</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 18 hours, 37 minutes</td>
+      <td class="data">17 days, 18 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 18 hours, 37 minutes</td>
+      <td class="data">17 days, 18 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
