--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 09:49:00 AM</p>
+    <p class="lastupdate">09/19/2020 09:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.6&#176;F</td>
+        <td class="data">66.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.6&#176;F</td>
+        <td class="data">66.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.6&#176;F</td>
+        <td class="data">66.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">56.3&#176;F</td>
+        <td class="data">56.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">72%</td>
+        <td class="data">70%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.965 inHg (0.015)</td>
+        <td class="data">29.967 inHg (0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph N (0&#176;)</td>
+        <td class="data">6 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:49:00 AM">
-            65.6</span><br/>
+          <span title="09:53:07 AM">
+            66.2</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:49:00 AM" class="hival">
-            65.6</span>
+          <span title="09:53:07 AM" class="hival">
+            66.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:16:28 AM">
             90</span><br/>
-          <span title="09:42:49 AM">
-            72</span>
+          <span title="09:53:03 AM">
+            70</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          219
+          220
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 19 hours, 2 minutes</td>
+      <td class="data">17 days, 19 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 19 hours, 2 minutes</td>
+      <td class="data">17 days, 19 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
