--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 10:34:00 AM</p>
+    <p class="lastupdate">09/19/2020 10:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">69.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">69.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.0&#176;F</td>
+        <td class="data">69.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.4&#176;F</td>
+        <td class="data">54.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">62%</td>
+        <td class="data">59%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.959 inHg (0.003)</td>
+        <td class="data">29.959 inHg (0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph NW (315&#176;)</td>
+        <td class="data">10 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.3&#176;F</td>
+        <td class="data">72.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:32:55 AM">
-            69.0</span><br/>
+          <span title="10:38:01 AM">
+            69.8</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:32:55 AM" class="hival">
-            69.0</span>
+          <span title="10:38:01 AM" class="hival">
+            69.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:16:28 AM">
             90</span><br/>
-          <span title="10:30:39 AM">
-            62</span>
+          <span title="10:38:19 AM">
+            59</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 19 hours, 47 minutes</td>
+      <td class="data">17 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 19 hours, 47 minutes</td>
+      <td class="data">17 days, 19 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
