--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 10:44:00 AM</p>
+    <p class="lastupdate">09/19/2020 10:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.9&#176;F</td>
+        <td class="data">54.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">58%</td>
+        <td class="data">56%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.959 inHg (0.001)</td>
+        <td class="data">29.960 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph NNE (22&#176;)</td>
+        <td class="data">7 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.5&#176;F</td>
+        <td class="data">72.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">51%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:43:41 AM">
-            70.4</span><br/>
+          <span title="10:48:07 AM">
+            71.0</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:43:41 AM" class="hival">
-            70.4</span>
+          <span title="10:48:07 AM" class="hival">
+            71.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:16:28 AM">
             90</span><br/>
-          <span title="10:43:27 AM">
-            58</span>
+          <span title="10:48:35 AM">
+            56</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          349
+          348
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 19 hours, 57 minutes</td>
+      <td class="data">17 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 19 hours, 57 minutes</td>
+      <td class="data">17 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
